fix alignment issue with footer

--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ nav div {
   width: 100vw;
   height: 150px;
   display: flex;
-  justify-content: space-evenly;
   align-items: center;
   color: #EDEDED;
   font-size: 12.7px;
@@ -112,16 +111,12 @@ nav div {
 }
 
 .footer_sub_container {
-  width: 100%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-}
-
-.footer_sub_container p {
-  display: flex;
-  justify-content: left;
+  margin: 0 auto;
 }
 
 .first_footer_container {
